# deep_learning_bild

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
cluster/: slurm_baseline.sh  slurm_eda.sh  slurm_hpt_augmentation.sh  slurm_hpt_combined.sh  slurm_hpt_dropout.sh  slurm_hpt_focal.sh  slurm_hpt_lr_scheduler.sh  slurm_overfit.sh  slurm_pipeline_after_daw.sh
configs/: baseline.yaml  baseline_cpu.yaml  hpt_augmentation.yaml  hpt_combined.yaml  hpt_dropout.yaml  hpt_focal.yaml  hpt_lr_scheduler.yaml  overfit_single.yaml  overfit_single_cpu.yaml  sweep_baseline.yaml
doc/: Sabina_Michelle_dlbs.docx  presentation_exchange.md
docs/: EDA.html  EXPERIMENT_RESULTS.md  RUN_GPU_CLUSTER.md  Report_Sabina_Michelle.docx  bewertungsraster.xlsx  main.html
notebooks/: EDA.ipynb  EDA_after_DAW.ipynb  main.ipynb
scripts/: check_env.py  eval_cc.py  eval_confusion.py  evaluate.py  link_data_to_cleaned.sh  make_splits.py  plot_figures.py  run_eda.py  run_overfit.py  run_pipeline.sh  tensorboard.py  train.py  visualize_predictions.py
splits/: folds.json
src/muscle_seg/: __init__.py  config.py  labels.py
src/muscle_seg/eval/: postprocess.py  run_eval.py  tensorboard_viz.py  visualize.py  volume_predict.py
src/muscle_seg/losses/: dice.py  focal.py  tversky.py
src/muscle_seg/metrics/: calibration.py  dice.py
src/muscle_seg/models/: __init__.py  bayesian_unet.py
src/muscle_seg/train/: tensorboard_logger.py  trainer.py
